--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon --exec npx babel-node ./src/app.js",
     "migrate": "npx sequelize db:migrate",
     "migrate-undo": "npx sequelize db:migrate:undo:all",
-    "seed": "npx sequelize db:seed:all"
+    "seed": "npx sequelize db:seed:all",
+    "eslint-fix": "npx eslint . --fix"
   },
   "author": "Mask0305",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
+    "base64-to-image": "^1.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -27,11 +29,14 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "path": "^0.12.7",
+    "ping": "^0.2.3",
+    "request": "^2.88.2",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
     "tedious": "^9.0.1"
