完成傳作弊影像以外的route

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,16 @@
         "semi": [
             "error",
             "always"
-        ]
-    }
+        ],"no-unused-vars":[
+			"warn", {
+				"vars": "all",
+				"args": "after-used",
+				"ignoreRestSiblings": false
+			}
+		],
+		"no-undef": [
+			"warn"
+		],
+		"no-console": "warn"
+	}
 }
