11/02 接圖片+回傳log 完成

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec npx babel-node ./src/app.js",
+    "start02": "nodemon --exec npx babel-node ./src/app02.js",
     "migrate": "npx sequelize db:migrate",
     "migrate-undo": "npx sequelize db:migrate:undo:all",
     "seed": "npx sequelize db:seed:all",
@@ -24,6 +25,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
